--- a/week8_multitask/homework.ipynb
+++ b/week8_multitask/homework.ipynb
@@ -86,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: wget: command not found\n",
+      "/bin/sh: wget: command not found\n",
+      "/bin/sh: wget: command not found\n",
+      "/bin/sh: wget: command not found\n"
+     ]
+    }
+   ],
    "source": [
     "# Train:\n",
     "!wget https://www.dropbox.com/s/xobyz6jgovvz3dm/kaggle-train.conll?dl=1 -O kaggle-train.conll\n",
@@ -820,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
